# causaganha

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Business_rules.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  TEAM_RATING_PLAN.md  TODO.md  TODO_BRANCH_INTEGRATION.md  architectural_review.md  causaganha_architectural_review.md  config.toml  coverage.xml  docker-compose.yml  gemini_example.py  migration_runner.py  mkdocs.yml  openskill_rating.py  pyproject.toml  ratings_export.csv  ratings_export_uppercase.csv  repomix-output.xml  requirements.txt  ruff.toml  todo-p0-hardening.md  todo.md
.agents/: README.md  amit-sharma.md  anna-muller.md  bruno-silva.md  carlos-pereira.md  clara-alves.md  codex1.md  david-coordinator.md  dimitri-ivanov.md  elena-rossi.md  fernando-costa.md  flowlead1.md  gemini1.md  infrastructure-devex.md  juan-carlos.md  jules1.md  jules2.md  julia-martins.md  kenji-nakamura.md  liu-wei.md  lucas-ribeiro.md  miguel-torres.md  monitoring-integration.md  nora-khaled.md  pm1.md  quality-docs.md  roberta-vieira.md  roberta-vieira.md.orig  sara-nilsson.md  sophie-dubois.md  techlead1.md  testing-docs.md
.claude/: settings.local.json
causaganha/: __init__.py
data/: causaganha.duckdb  diarios_2025_only.json  diarios_pipeline_ready.json  dj_20250624_decisions_for_elo_testing.json  dj_20250624_extracted_text.txt  dj_20250624_extraction.json  todos_diarios_tjro.json
docs/: Business_rules.md  TEAM_RATING_PLAN.md  architectural_review.md  archive_lifecycle_management.md  archive_retention_policy.md  better-scrap.md  cli_design.md  cloudflare-r2-storage-plan.md  csv-to-duckdb-migration-plan.md  data_retention_policies.md  database-archive-implementation.md  database-archive-plan.md  database_scaling_guidelines.md  diario-class.md  digital_preservation_compliance.md  distributed_architecture_decisions.md  distributed_lock_protocol.md  faq.md  gdpr_compliance.md  governance_guidelines.md  ia_discovery_guide.md  index.md  modularizar.md  multi_tribunal_user_journey.md  multilingual_config.md  openskill.md  pdf-archival-strategy.md  pii_handling_strategy.md  pipeline_architecture.md  project-structure-plan.md  prompt_versioning_strategy.md  queue-based-pipeline-plan.md  quickstart.md  refactor_archive_command.md  review-2025-06-25.md  security_best_practices.md  security_privacy_best_practices.md  wayback-archive-plan.md
migrations/: 001_init.sql  001_initial_schema.sql  002_archived_databases.sql  003_queue_system.sql
pipeline/: collect_and_archive.py
scripts/: bulk_discovery.py  check_environment.py  check_tribunal_registry.py  collect_and_archive.py  decode_pii_tool.py  manual_discovery.py  migrate_existing_pii.py  playwright_discovery.py  run_all_tests.sh  run_analytics.py  setup_dev.sh  update_prompt_hashes.py
src/: __init__.py  anonymization_hooks.py  archive_db.py  async_diario_pipeline.py  cli.py  cli_new.py  config.py  database.py  download_orchestrator.py  downloader.py  extractor.py  gdrive.py  ia_database_sync.py  ia_discovery.py  ia_helpers.py  pipeline.py  (+11 more)
src-dev/: 001_miguel-torres_code.diff  005_miguel-torres_card.diff  007_roberta-vieira_code.diff  008_roberta-vieira_code.diff  010_roberta-vieira_card_update.diff  011_bruno-silva_card_setup.diff  012_bruno-silva_code.diff  013_bruno-silva_code.diff  014_bruno-silva_code.diff  015_bruno-silva_card_update.diff
(+243 files in other folders)
