[project]
name = "causa-ganha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "duckdb>=0.10.0",
    "google-api-python-client>=2.173.0",
    "google-auth>=2.40.3",
    "google-generativeai>=0.8.5",
    "mkdocs>=1.6.1",
    "pandas>=2.3.0",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.0.0",
    "python-json-logger>=3.3.0",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "trueskill>=0.4.5",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
