[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causaganha"
version = "1.0.0"
description = "Automated judicial decision analysis using OpenSkill rating system"
authors = [{name = "CausaGanha Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.0",
    "duckdb>=0.10.0",
    "google-generativeai>=0.8.5",
    "internetarchive>=5.4.0",
    "openskill==5.0.1",
    "pandas>=2.3.0",
    "pymupdf>=1.26.1",
    "pyparsing==3.1.4",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.5",
    "python-json-logger>=3.3.0",
    "rich>=13.7.0",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.0",
    "sphinx>=8.0.0",
    "pip-audit>=2.7.2",
]

[project.scripts]
causaganha = "cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
